[package]
name = "tproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0",features = ["macros","rt-multi-thread"]}
#tproxy-config = "3.0.1"
socket2 = "0.5.6"
tun2 = {version = "1.2.8",features = ["async"]}
ipstack = "0.0.8"
libc = "0.2.153"
ctrlc2 = {version = "3.5.7",features = ["tokio"]}
net-route = {version = "0.4.2"}

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.56.0"
